fix login list alignment and added animation

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,22 @@
     margin:0 0 .5rem .5rem;
   }
 }
+
+.login-inner-list{
+  & > li::before{
+    position: absolute;
+    margin-right:.5rem;
+    left:0;
+    content:"";
+    width:8px;
+    height: 8px;
+    background-color: var(--color-white);
+    border-radius: 50%;
+    top:10px
+
+  }
+}
+
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
@@ -43,5 +59,28 @@ body {
   margin: 0;
   padding: 0;
   background-color: var(--color-black);
+  overflow: clip auto;
 }
 
+body::-webkit-scrollbar{
+  width:0;
+  height: 0;
+}
+
+
+.zoom-in-out {
+    animation: zoom_in_out 0.7s ease-in-out forwards;
+}
+
+
+@keyframes zoom_in_out {
+    0% {
+    transform: scale(0%);
+    }
+    50% {
+        transform: scale(120%);
+    }
+    100% {
+        transform: scale(100%);
+    }
+}
